# db_corsework

./: .flake8  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  db_manager.py  db_setup.py  hh_api.py  loader.py
