[tool.poetry]
name = "db-corsework"
version = "0.1.0"
description = ""
authors = ["slav <vrazumihindima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
flake8 = "^7.3.0"
mypy = "^1.19.1"


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv|tests'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
line_length = 119